proto 빌드 타입 개선

--- a/proto/package.json
+++ b/proto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heavyrisem/sso-msa-example-proto",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -10,17 +10,17 @@
     "prebuild": "rimraf dist"
   },
   "dependencies": {
-    "@protobuf-ts/plugin": "^2.8.2",
-    "@protobuf-ts/runtime": "^2.8.2",
+    "@grpc/grpc-js": "^1.8.7",
     "copyfiles": "^2.4.1",
     "cross-spawn": "^7.0.3",
-    "protobufjs": "^7.1.2",
-    "protobufjs-cli": "^1.0.2"
+    "nestjs-proto-gen-ts": "^1.0.21",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
     "@types/node": "^18.11.18",
     "rimraf": "^4.0.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
