--- a/sso-server/package.json
+++ b/sso-server/package.json
@@ -34,6 +34,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/microservices": "^9.2.1",
+    "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "class-transformer": "^0.5.1",
@@ -41,6 +42,8 @@
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.7.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -53,6 +56,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
