--- a/proto/package.json
+++ b/proto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heavyrisem/sso-msa-example-proto",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -13,7 +13,7 @@
     "@grpc/grpc-js": "^1.8.7",
     "copyfiles": "^2.4.1",
     "cross-spawn": "^7.0.3",
-    "nestjs-proto-gen-ts": "^1.0.21",
+    "@heavyrisem/nestjs-proto-gen-ts": "^1.0.21",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
