--- a/sso-client/package.json
+++ b/sso-client/package.json
@@ -32,9 +32,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/microservices": "^9.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.0",
+    "cookie-parser": "^1.4.6",
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.7.0",
