--- a/proto/.vscode/settings.json
+++ b/proto/.vscode/settings.json
@@ -7,5 +7,10 @@
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**/node_modules": true
+    },
+    "protoc": {
+        "options": [
+            "--proto_path=${workspaceRoot}/src",
+        ]
     }
 }
