--- a/proto/package.json
+++ b/proto/package.json
@@ -1,21 +1,21 @@
 {
   "name": "@heavyrisem/sso-msa-example-proto",
-  "version": "1.0.11",
+  "version": "1.1.1",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "build:proto-type": "ts-node build/proto",
+    "build:protoc": "cd src && protoc --ts_proto_opt=esModuleInterop=true --plugin=../node_modules/.bin/protoc-gen-ts_proto --ts_proto_out ./ --proto_path=./ **/*.proto",
     "build:tsc": "copyfiles -u 1 ./src/**/*.proto ./dist && tsc && rimraf ./dist/build",
     "build": "yarn build:proto-type && yarn build:tsc",
     "prebuild": "rimraf dist"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.7",
-    "@heavyrisem/nestjs-proto-gen-ts": "^1.0.21",
-    "@heavyrisem/sso-msa-example-proto": "^1.0.6",
     "copyfiles": "^2.4.1",
     "cross-spawn": "^7.0.3",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "ts-proto": "^1.139.0"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
