--- a/proto/package.json
+++ b/proto/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@heavyrisem/sso-msa-example-proto",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "build:proto-type": "ts-node build/proto",
-    "build:protoc": "cd src && protoc --ts_proto_opt=esModuleInterop=true --plugin=../node_modules/.bin/protoc-gen-ts_proto --ts_proto_out ./ --proto_path=./ **/*.proto",
+    "build:protoc": "cd src && protoc --ts_proto_opt=nestJs=true,exportCommonSymbols=false --plugin=../node_modules/.bin/protoc-gen-ts_proto --ts_proto_out ./ --proto_path=./ **/*.proto",
     "build:tsc": "copyfiles -u 1 ./src/**/*.proto ./dist && tsc && rimraf ./dist/build",
     "build": "yarn build:proto-type && yarn build:tsc",
     "prebuild": "rimraf dist"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.7",
+    "@nestjs/microservices": "^9.3.5",
     "copyfiles": "^2.4.1",
     "cross-spawn": "^7.0.3",
     "rxjs": "^7.8.0",
