--- a/proto/package.json
+++ b/proto/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.7",
+    "@heavyrisem/sso-msa-example-proto": "1.2.5",
     "@nestjs/microservices": "^9.3.5",
     "copyfiles": "^2.4.1",
     "cross-spawn": "^7.0.3",
