--- a/vite-sso/package.json
+++ b/vite-sso/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
     "react-router-dom": "^6.4.3",
+    "react-social-login-buttons": "^3.6.1",
     "react-toastify": "^9.1.1",
     "react-uuid": "^2.0.0",
     "recoil": "^0.7.6",
