--- a/proto/package.json
+++ b/proto/package.json
@@ -1,23 +1,21 @@
 {
   "name": "@heavyrisem/sso-msa-example-proto",
-  "version": "1.2.6",
+  "version": "1.2.15",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "build:proto-type": "ts-node build/proto",
-    "build:protoc": "cd src && protoc --ts_proto_opt=nestJs=true,exportCommonSymbols=false --plugin=../node_modules/.bin/protoc-gen-ts_proto --ts_proto_out ./ --proto_path=./ **/*.proto",
+    "build:protoc": "cd src && protoc --ts_proto_opt=exportCommonSymbols=false,nestJs=true,nestJsDecorators=false --plugin=../node_modules/.bin/protoc-gen-ts_proto --ts_proto_out ./ --proto_path=./ **/*.proto",
     "build:tsc": "copyfiles -u 1 ./src/**/*.proto ./dist && tsc && rimraf ./dist/build",
     "build": "yarn build:proto-type && yarn build:tsc",
     "prebuild": "rimraf dist"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.8.7",
     "@heavyrisem/sso-msa-example-proto": "1.2.5",
-    "@nestjs/microservices": "^9.3.5",
+    "@heavyrisem/ts-proto": "^1.139.2",
     "copyfiles": "^2.4.1",
     "cross-spawn": "^7.0.3",
-    "rxjs": "^7.8.0",
-    "ts-proto": "^1.139.0"
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
