--- a/sso-server/package.json
+++ b/sso-server/package.json
@@ -28,12 +28,12 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.4",
     "@grpc/proto-loader": "^0.7.4",
-    "@heavyrisem/sso-msa-example-proto": "^1.2.6",
+    "@heavyrisem/sso-msa-example-proto": "^1.2.14",
     "@nestjs/common": "^9.3.6",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.3.5",
     "@nestjs/jwt": "^10.0.1",
-    "@nestjs/microservices": "^9.2.1",
+    "@nestjs/microservices": "^9.3.7",
     "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.3.6",
     "@nestjs/typeorm": "^9.0.0",
@@ -42,8 +42,12 @@
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.7.0",
+    "oauth": "^0.10.0",
     "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.1",
+    "passport-oauth2": "^1.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -57,7 +61,9 @@
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/passport": "^1.0.11",
+    "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-kakao": "^1.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
