feat: User 공유타입으로 확장, email 필드 Optional 하게 변경

--- a/vite-sso/tsconfig.json
+++ b/vite-sso/tsconfig.json
@@ -26,6 +26,9 @@
     "src",
     "types"
   ],
+  "exclude": [
+    "node_modules"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
