--- a/sso-server/package.json
+++ b/sso-server/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=production nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -28,11 +28,12 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.4",
     "@grpc/proto-loader": "^0.7.4",
-    "@heavyrisem/sso-msa-example-proto": "^1.2.20",
+    "@heavyrisem/sso-msa-example-proto": "^1.2.24",
     "@nestjs/common": "^9.3.6",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.3.5",
     "@nestjs/jwt": "^10.0.1",
+    "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/microservices": "^9.3.7",
     "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.3.6",
@@ -54,8 +55,8 @@
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/cli": "^9.2.0",
+    "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
