--- a/sso-server/docker-compose.yml
+++ b/sso-server/docker-compose.yml
@@ -1,27 +1,27 @@
 version: '3'
 
 services:
-  nginx:
-    image: nginx
-    ports:
-      - 80:80
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - sso_server
-    networks:
-      - sso
-  sso_server:
-    image: sso-server
-    # ports:
-    #   - 3001:3001
-    #   - 3002:3002
-    depends_on:
-      - db
-    env_file:
-      - .env.development
-    networks:
-      - sso
+  # nginx:
+  #   image: nginx
+  #   ports:
+  #     - 80:80
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
+  #   depends_on:
+  #     - sso_server
+  #   networks:
+  #     - sso
+  # sso_server:
+  #   image: sso-server
+  #   # ports:
+  #   #   - 3001:3001
+  #   #   - 3002:3002
+  #   depends_on:
+  #     - db
+  #   env_file:
+  #     - .env.development
+  #   networks:
+  #     - sso
 
   db:
     container_name: sso-msa-db
