--- a/sso-client/package.json
+++ b/sso-client/package.json
@@ -32,9 +32,12 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.3.5",
     "@nestjs/jwt": "^10.0.1",
+    "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/microservices": "^9.2.1",
     "@nestjs/platform-express": "^9.3.5",
     "@nestjs/typeorm": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
