--- a/vite-sso/docker-compose.yml
+++ b/vite-sso/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '3'
 services:
-  web:
-    build: .
-    ports:
-      - '80:80'
+  sso_web:
+    image: sso_web
+    networks:
+      - nginx
+    # ports:
+    #   - '80:80'
+networks:
+  nginx:
+    external: true
