feat: compose name update

--- a/sso-client/docker-compose.yml
+++ b/sso-client/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 
 services:
-  sso_service_a:
+  service_a:
     image: sso-service
     env_file: .env-a.production
     networks:
       - sso
       - nginx
-  sso_service_b:
+  service_b:
     image: sso-service
     env_file: .env-b.production
     networks:
