--- a/sso-server/docker-compose.yml
+++ b/sso-server/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  sso_server:
+  server:
     image: sso-server
     # ports:
     #   - 3001:3001
@@ -11,7 +11,7 @@ services:
     networks:
       - sso
       - nginx
-  sso_db:
+  db:
     container_name: sso-db
     image: mysql
     restart: always
